# yolo_classification

./: CMakeLists.txt  README.md  package.xml
cfg/: Darknet.cfg
launch/: yolo_classification.launch
msg/: YoloObject.msg  YoloObjectArray.msg
src/: SyncedYoloData.cpp  SyncedYoloData.hpp  YoloClassification.cpp  YoloClassification.hpp  synced_yolo_data.cpp  yolo_classification.cpp
