<?xml version="1.0"?>
<package format="2">
  <name>yolo_classification</name>
  <version>0.0.0</version>
  <description>
    Example of using Darknet C interface in C++/ROS
  </description>
  <maintainer email="mradov@gmail.com">Micho Radovnikovich</maintainer>
  <author email="mradov@gmail.com">Micho Radovnikovich</author>
  <license>BSD2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>cv_bridge</depend>
  <depend>darknet_ros</depend>

</package>
